k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: distri-libreria
  labels:
    name: distri-libreria
    project: microservicios-libreria
