k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: distrilibreria
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: antoni30/api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: api-gateway
  namespace: distrilibreria
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30010
  type: NodePort
