k8s/cockroachdb.yml
apiVersion: v1
kind: Namespace
metadata:
  name: distrilibreria
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockroachdb
  namespace: distrilibreria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cockroachdb
  template:
    metadata:
      labels:
        app: cockroachdb
    spec:
      containers:
        - name: cockroachdb
          image: antoni30/crocoach:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 26257
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: cockroachdb
  namespace: distrilibreria
spec:
  selector:
    app: cockroachdb
  ports:
  - name: sql
    protocol: TCP
    port: 26257
    targetPort: 26257
  - name: admin
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockroachdb-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: cockroachdb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cockroachdb
            port:
              number: 8080
