k8s/ms-autenticacion.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-autenticacion
  namespace: distrilibreria
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-autenticacion
  template:
    metadata:
      labels:
        app: ms-autenticacion
    spec:
      containers:
        - name: ms-autenticacion
          image: antoni30/ms-autenticacion:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: ms-autenticacion
  namespace: distrilibreria
spec:
  selector:
    app: ms-autenticacion
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30004
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autenticacion-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: autenticacion.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-autenticacion
            port:
              number: 8080
