k8s/ms-catalogo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-catalogo
  namespace: distrilibreria
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-catalogo
  template:
    metadata:
      labels:
        app: ms-catalogo
    spec:
      containers:
        - name: ms-catalogo
          image: antoni30/ms-catalogo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: ms-catalogo
  namespace: distrilibreria
spec:
  selector:
    app: ms-catalogo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30006
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogo-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: catalogo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-catalogo
            port:
              number: 8080
