k8s/notificaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones
  namespace: distrilibreria
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notificaciones
  template:
    metadata:
      labels:
        app: notificaciones
    spec:
      containers:
        - name: notificaciones
          image: antoni30/notificaciones:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: notificaciones
  namespace: distrilibreria
spec:
  selector:
    app: notificaciones
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30008
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificaciones-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: notificaciones.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notificaciones
            port:
              number: 8080
