k8s/publicaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publicaciones
  namespace: distrilibreria
spec:
  replicas: 2
  selector:
    matchLabels:
      app: publicaciones
  template:
    metadata:
      labels:
        app: publicaciones
    spec:
      containers:
        - name: publicaciones
          image: antoni30/publicaciones:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: publicaciones
  namespace: distrilibreria
spec:
  selector:
    app: publicaciones
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30007
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publicaciones-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: publicaciones.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: publicaciones
            port:
              number: 8080
