k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: distrilibreria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: antoni30/rabittmq:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: distrilibreria
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
    nodePort: 30002
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: rabbitmq.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
