k8s/usuarios.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  namespace: distrilibreria
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: antoni30/usuarios:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: usuarios
  namespace: distrilibreria
spec:
  selector:
    app: usuarios
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30005
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usuarios-ingress
  namespace: distrilibreria
spec:
  rules:
  - host: usuarios.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usuarios
            port:
              number: 8080
